--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
- "dependencies": {
+  "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -30,11 +30,10 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "mongoose": "^8.7.1",
-    "nestjs-telegraf": "^2.7.0",
+    "node-telegram-bot-api": "^0.66.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.0",
-    "telegraf": "^4.16.3",
     "winston": "^3.15.0"
   },
   "devDependencies": {
