--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.4",
     "@nestjs/websockets": "^10.4.4",
+    "@types/lodash": "^4.17.13",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
     "mongoose": "^8.7.1",
     "node-telegram-bot-api": "^0.66.0",
     "reflect-metadata": "^0.2.0",
