--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-socket.io": "^10.4.4",
     "@nestjs/websockets": "^10.4.4",
     "@types/lodash": "^4.17.13",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
