--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.4",
     "@nestjs/websockets": "^10.4.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.13",
     "@types/node-telegram-bot-api": "^0.64.7",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
